ADD: with detail
